@@ -1,3 +1,7 @@
+* 2013-11-06 - thorben.betten@open-xchange.com
+
+ - Fix for bug 29683: Create special "E-Mail attachments" InfoStore folder with private-only permissions
+
 * 2013-11-06 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 29609: Use cached sessions for consecutive WebDAV requests of the same client 
